--- a/app/templates/transactions.html
+++ b/app/templates/transactions.html
@@ -530,7 +530,7 @@
                 search_ledger: null,
                 selected_ledger: null,
                 left_menu: [
-                    {'caption': 'Транзакции', 'class': 'fa fa-columns m-r-10', 'enabled': true},
+                    {'caption': 'Transactions', 'class': 'fa fa-columns m-r-10', 'enabled': true},
                     {'caption': 'ГУ-11', 'class': 'fa fa-table m-r-10', 'enabled': false},
                     {'caption': 'ГУ-12', 'class': 'fa fa-table m-r-10', 'enabled': false},
                     {'caption': 'Грузоперевозки', 'class': 'fa fa-globe m-r-10', 'enabled': false},
