--- a/app/templates/transactions.html
+++ b/app/templates/transactions.html
@@ -313,6 +313,9 @@
                             <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <img src="/static/logos/account.jpg" alt="user" class="profile-pic m-r-5" /> {{ user.username }}
                             </a>
+                            <a href="/logout">
+                                <i class="fa fa-sign-out" aria-hidden="true" style="color: white;"></i>
+                            </a>
                         </li>
                     </ul>
                 </div>
