--- a/app/templates/auth.html
+++ b/app/templates/auth.html
@@ -77,7 +77,7 @@
                               </div>
                                 <div class="row" style="margin-top: 30px;">
                                     <div class="col"></div>
-                                    <a @click.prevent="" href="">Scan to authorize with QR</a>
+                                    <a v-if="qr" @click.prevent="" href="">Scan to authorize with QR</a>
                                     <div class="col"></div>
                                 </div>
                               <div class="row" style="height: 250px;">
@@ -163,7 +163,7 @@
         function ws_connect() {
             ws_auth = new WebSocket("{{ ws_url }}");
             ws_auth.onclose = function(event) {
-                //app.$data.qr = null;
+                app.$data.qr = null;
                 console.log("OnClose ");
             };
             ws_auth.onmessage = function(event) {
