make table rows striped

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -214,13 +214,13 @@
                 <!-- ============================================================== -->
                 <div class="row">
                     <!-- Column -->
-                    <div class="col-sm-4">
-                        <div class="card">
+                    <div class="col-sm-6">
+                        <div class="card" style="padding-right: 10px;padding-left: 10px;">
                             <div class="row" style="margin-top: 15px;">
                                 <h4 style="margin-left: 35px;">User accounts</h4>
                                 <a @click.prevent="open_create_account()" class="srh-btn" title="Create new account" style="margin-left: 20px;cursor:pointer;"><i class="ti-plus"></i></a>
                             </div>
-                            <table class="table">
+                            <table class="table table-striped">
                               <thead>
                                 <tr>
                                   <th scope="col">Username</th>
