--- a/app/templates/transactions.html
+++ b/app/templates/transactions.html
@@ -423,7 +423,7 @@
                                 <iframe src="https://docs.google.com/gview?url=https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf&embedded=true"></iframe>
                                 -->
 
-                                <table v-if="!loader_enable" class="table">
+                                <table v-if="!loader_enable" class="table table-striped">
                                   <thead>
                                     <tr>
                                       <th scope="col"># seq_no</th>
