--- a/app/templates/gu.html
+++ b/app/templates/gu.html
@@ -192,6 +192,10 @@
                     <!-- Column -->
                     <div class="col-sm-12">
                         <div class="card" style="padding-left: 10px; padding-right: 10px;">
+                            <div class="row" style="margin-top: 15px;">
+                                <h4 style="margin-left: 35px;">{{ caption }}</h4>
+                                <a @click.prevent="" class="srh-btn" title="Add" style="margin-left: 20px;cursor:pointer;"><i class="ti-plus"></i></a>
+                            </div>
                             <table class="table table-striped">
                               <thead>
                                 <tr>
