--- a/app/templates/gu.html
+++ b/app/templates/gu.html
@@ -522,7 +522,8 @@
                             no: o.no,
                             md5: o.md5,
                             url: o.url,
-                            filename: o.filename
+                            filename: o.filename,
+                            mime_type: o.mime_type
                         }
                         attachments.push(a);
                     }
