CREATION GU-11 & GU-12

--- a/app/templates/gu.html
+++ b/app/templates/gu.html
@@ -511,7 +511,7 @@
                     formData.append('arrival_station', this.form.arrival_station || '');
                     formData.append('month', this.form.month || '');
                     formData.append('year', this.form.year || '');
-                    formData.append('decade', this.form.decade || '');
+                    formData.append('decade', this.form.decade || '-');
                     formData.append('tonnage', this.form.tonnage || '');
                     formData.append('shipper', this.form.shipper || '');
 
